force-app/main/default/objects/SBQQ__SubscribedQuoteLine__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the subscribed asset record is active.</description>
        <inlineHelpText>Indicates whether the subscribed asset record is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>