force-app/main/default/objects/SBQQ__SubscribedQuoteLine__c/fields/SBQQ__AssetQuoteLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AssetQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset quote line being covered by a subscription quote line.</description>
        <inlineHelpText>Asset quote line being covered by a subscription quote line.</inlineHelpText>
        <label>Asset Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Asset Quote Lines</relationshipLabel>
        <relationshipName>SubscribedQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>