force-app/main/default/objects/SBQQ__SubscribedQuoteLine__c/fields/SBQQ__SubscriptionBasePrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionBasePrice__c</fullName>
        <description>Unit price used in Percent of Total calculation.</description>
        <inlineHelpText>Unit price used in Percent of Total calculation.</inlineHelpText>
        <label>Subscription Base Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>