force-app/main/default/objects/SBQQ__SubscribedQuoteLine__c/fields/SBQQ__SubscriptionQuoteLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription quote line that covers the asset quote line.</description>
        <inlineHelpText>Subscription quote line that covers the asset quote line.</inlineHelpText>
        <label>Subscription Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Subscribed Quote Lines (Subscription Quote Line)</relationshipLabel>
        <relationshipName>SubscriptionQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>